# countdown-cli

./: .cookiecutter.json  .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/countdown/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_main.py
