[tool.poetry]
name = "countdown-cli"
version = "1.0.2"
description = "Terminal program to display countdown timer"
authors = ["Trey Hunner <trey@treyhunner.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/treyhunner/countdown-cli"
repository = "https://github.com/treyhunner/countdown-cli"
documentation = "https://countdown-cli.readthedocs.io"
packages = [
    { include = "countdown", from = "src" },
]
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/treyhunner/countdown-cli/releases"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
coverage = {extras = ["toml"], version = "^6.2"}
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.1"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.1.0"

[tool.poetry.scripts]
countdown = "countdown.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["countdown", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
